--- a/css/styles.css
+++ b/css/styles.css
@@ -16,7 +16,7 @@ header .top{
 header .top .container {
     display: flex;
     justify-content: space-between;
-    padding: 13px;
+    padding: 8px;
 }
 
 header .top .container a{
@@ -36,19 +36,28 @@ header .top .container .tel a i{
     font-weight: 600;
 }
 
-header .top .container .social :not(:last-child) {
-    margin-right: 10px ;
+header .top .container .social a{
+    font-size: 14px;
 }
 
-header .bottom .container .navigation {
-    display: flex;
-    align-items: center;
+header .top .container .social :not(:last-child) {
+    margin-right: 10px ;
 }
 
 header .bottom .container {
     display: flex;
     justify-content: space-between;
     padding: 13px;
+}
+
+header .bottom .container .navigation {
+    display: flex;
+    align-items: center;
+  
+}
+header .bottom .container .navigation .nav-bar {
+     margin-left: 10px;
+  
 }
 
 .bottom {
